# name-format

./: Makefile  README.md  pyproject.toml
name_format/: __init__.py  cli.py  core.py
name_format.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli_smoke.py
