[build-system]
requires = [
    "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[project]
name = "name-format"
version = "0.1.1"
description = "Robust personal-name formatter (Irish O’/Ó, Mc/Mac, initials, particles)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Steve Nolan" },
]
dependencies = []

[project.license]
text = "MIT"

[project.scripts]
namefmt = "name_format.cli:main"

[project.urls]
Homepage = "https://github.com/quiet-logic/calm-log"

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "name_format*",
]

[tool.black]
line-length = 88
target-version = [
    "py310",
]

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = []

["project.scripts"]
namefmt = "name_format.cli:main"
